--- a/index.html
+++ b/index.html
@@ -4,7 +4,46 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/react.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mayur Nikumbh</title>
+    <title>Mayur Nikumbh — Full‑Stack Developer | React • MERN • UI</title>
+
+    <!-- SEO meta (update values / image URLs as needed) -->
+    <meta name="description" content="Mayur Nikumbh — Full-stack web developer (React, Node.js, MERN). Portfolio showcasing projects, services, and contact information. Hire for frontend, backend, and full-stack work." />
+    <meta name="keywords" content="Mayur Nikumbh, web developer, full-stack developer, React developer, MERN developer, JavaScript, Node.js, Tailwind CSS, frontend developer, web developer portfolio, hire web developer" />
+    <meta name="robots" content="index,follow" />
+    <link rel="canonical" href="https://mayurnikumbh.dev/" />
+
+    <!-- Open Graph / Social -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Mayur Nikumbh — Full‑Stack Developer" />
+    <meta property="og:description" content="Portfolio of Mayur Nikumbh — React, Node.js, and MERN projects. View work, case studies, and contact info." />
+    <meta property="og:url" content="https://mayurnikumbh.dev/" />
+    <meta property="og:site_name" content="Mayur Nikumbh" />
+ 
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Mayur Nikumbh — Full‑Stack Developer" />
+    <meta name="twitter:description" content="Portfolio of Mayur Nikumbh — React, Node.js, and MERN projects. View work, case studies, and contact info." />
+   
+
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Mayur Nikumbh",
+      "url": "https://mayurnikumbh.dev/",
+      "sameAs": [
+        "https://github.com/codelander07",
+        "https://www.linkedin.com/in/mayur-nikumbh"
+      ],
+      "jobTitle": "SoftwareDeveloper",
+      "worksFor": {
+        "@type": "Organization",
+        "name": "Self-Employed"
+      }
+    }
+    </script>
   </head>
   <body>
     <div id="root"></div>
