updated the seo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Mayur Nikumbh — Full Stack Developer | React • MERN • UI</title>
 
     <!-- SEO meta (update values / image URLs as needed) -->
-    <meta name="description" content="Mayur Nikumbh — Full Stack web developer (React, Node.js, MERN). Portfolio showcasing projects, services, and contact information. Hire for frontend, backend, and full-stack work." />
+    <meta name="description" content="Mayur Nikumbh - Full Stack web developer (React, Node.js, MERN). Portfolio showcasing projects, services, and contact information. Hire for frontend, backend, and full-stack work." />
 
     <meta name="keywords" content="Mayur Nikumbh, web developer, full stack developer, React developer, MERN developer, JavaScript, Node.js, Tailwind CSS, frontend developer, web developer portfolio, hire web developer" />
     
@@ -17,7 +17,7 @@
     <!-- Open Graph / Social -->
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Mayur Nikumbh — Full Stack Developer" />
-    <meta property="og:description" content="Portfolio of Mayur Nikumbh — React, Node.js, and MERN projects. View work, case studies, and contact info." />
+    <meta property="og:description" content="Portfolio of Mayur Nikumbh - React, Node.js, and MERN projects. View work, case studies, and contact info." />
     <meta property="og:url" content="https://mayurnikumbh.dev/" />
     <meta property="og:site_name" content="Mayur Nikumbh" />
  
@@ -25,7 +25,7 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Mayur Nikumbh — Full Stack Developer" />
-    <meta name="twitter:description" content="Portfolio of Mayur Nikumbh — React, Node.js, and MERN projects. View work, case studies, and contact info." />
+    <meta name="twitter:description" content="Portfolio of Mayur Nikumbh - React, Node.js, and MERN projects. View work, case studies, and contact info." />
    
 
     <!-- Structured Data (JSON-LD) -->
