upadted the title

--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mayur Nikumbh — Full Stack Developer | React • MERN • UI</title>
+    <title>Mayur Nikumbh - Software Developer</title>
 
     <!-- SEO meta (update values / image URLs as needed) -->
     <meta name="description" content="Mayur Nikumbh - Full Stack web developer (React, Node.js, MERN). Portfolio showcasing projects, services, and contact information. Hire for frontend, backend, and full-stack work." />
 
-    <meta name="keywords" content="Mayur Nikumbh, web developer, full stack developer, React developer, MERN developer, JavaScript, Node.js, Tailwind CSS, frontend developer, web developer portfolio, hire web developer" />
+    <meta name="keywords" content="Mayur Nikumbh, web developer, full stack developer, React developer, MERN developer, Next.js developer, JavaScript, TypeScript, Node.js, Express, MongoDB, PostgreSQL, REST API, GraphQL, Tailwind CSS, CSS3, HTML5, frontend developer, backend developer, UI/UX, responsive design, mobile-first, performance optimization, web accessibility, SEO, Vite, Webpack, Git, CI/CD, Docker, AWS, Azure, Firebase, serverless, SaaS, e‑commerce, PWA, SPA, testing, Jest, Cypress, unit testing, integration testing, Python, Django, AI application builder, machine learning, open-source contributor, freelance developer, contract developer, remote developer, hire web developer, portfolio, Jalgaon, Pachora, India, Software Developer, Software Engineer, Mayur Patil, Nikumbh Mayur , Best developer in jalgaon, website builder in pachora" />
     
     <meta name="robots" content="index,follow" />
     <link rel="canonical" href="https://mayurnikumbh.dev/" />
 
     <!-- Open Graph / Social -->
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Mayur Nikumbh — Full Stack Developer" />
+    <meta property="og:title" content="Mayur Nikumbh - Software Developer" />
     <meta property="og:description" content="Portfolio of Mayur Nikumbh - React, Node.js, and MERN projects. View work, case studies, and contact info." />
     <meta property="og:url" content="https://mayurnikumbh.dev/" />
     <meta property="og:site_name" content="Mayur Nikumbh" />
@@ -24,8 +24,8 @@
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Mayur Nikumbh — Full Stack Developer" />
-    <meta name="twitter:description" content="Portfolio of Mayur Nikumbh - React, Node.js, and MERN projects. View work, case studies, and contact info." />
+    <meta name="twitter:title" content="Mayur Nikumbh - Software Developer" />
+    <meta name="twitter:description" content="Portfolio of Mayur Nikumbh - Next.js ,React,Python, Node.js, Django and MERN projects. View work, case studies, and contact info." />
    
 
     <!-- Structured Data (JSON-LD) -->
